[kotlin] KTIJ-40284 silence jdk warnings when run script
GitOrigin-RevId: 6ff81051e21c37f531207054fe0d0f16b2c1c77f